--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- CSS -->
+        <!-- CSS link -->
         <link rel="stylesheet" href="./assets/css/style.css" />
 
         <title>F8 Messenger</title>
@@ -82,6 +82,7 @@
             </div>
         </div>
 
+        <!-- Script link -->
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
