--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                     </div>
                 </div>
                 <div class="input-wrapper">
-                    <input
-                        type="text"
-                        class="message-input"
-                        placeholder="Enter message..."
-                    />
+                    <input type="text" class="message-input" placeholder="Enter message..." />
                     <button class="primary-button send-button">Send</button>
                 </div>
             </div>
@@ -40,16 +36,8 @@
                     <img src="./assets/images/icon.jpg" alt="F8 messenger" />
                 </div>
                 <div class="login-form">
-                    <input
-                        type="text"
-                        class="form-input"
-                        placeholder="Enter your email..."
-                    />
-                    <input
-                        type="password"
-                        class="form-input"
-                        placeholder="Enter password..."
-                    />
+                    <input type="text" class="form-input" placeholder="Enter your email..." />
+                    <input type="password" class="form-input" placeholder="Enter your password..." />
                     <button class="primary-button form-button">Login</button>
                     <p class="navigate-message">
                         Do not have account?
@@ -57,21 +45,9 @@
                     </p>
                 </div>
                 <div class="register-form hidden">
-                    <input
-                        type="text"
-                        class="form-input"
-                        placeholder="Enter your name..."
-                    />
-                    <input
-                        type="text"
-                        class="form-input"
-                        placeholder="Enter your email..."
-                    />
-                    <input
-                        type="password"
-                        class="form-input"
-                        placeholder="Enter password..."
-                    />
+                    <input type="text" class="form-input" placeholder="Enter your name..." />
+                    <input type="text" class="form-input" placeholder="Enter your email..." />
+                    <input type="password" class="form-input" placeholder="Enter your password..." />
                     <button class="primary-button form-button">Register</button>
                     <p class="navigate-message">
                         Already have account?
