--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="chat-box">
+            <div class="chat-box hidden">
                 <div class="message-list">
                     <div class="message-item">
                         <div class="username">Hùng</div>
@@ -31,7 +31,7 @@
                     <button class="primary-button send-button">Send</button>
                 </div>
             </div>
-            <div class="login-box hidden">
+            <div class="login-box">
                 <div class="logo">
                     <img src="./assets/images/icon.jpg" alt="F8 messenger" />
                 </div>
